Issue#19 Fluffychat: add translations

--- a/assets/l10n/intl_en.arb
+++ b/assets/l10n/intl_en.arb
@@ -2976,4 +2976,6 @@
   },
   "hideUnimportantStateEvents": "Hide unimportant state events",
   "doNotShowAgain": "Do not show again"
+  "noSearchResult": "No search results found",
+  "@noSearchResult": {}
 }
