Issue #17 + #18 Fluffychat: clear search results when new search starts, show loading symbol while searching

--- a/assets/l10n/intl_de.arb
+++ b/assets/l10n/intl_de.arb
@@ -2991,7 +2991,9 @@
     "placeholders": {
       "number": {}
     }
-  }
+  },
   "noSearchResult": "Keine Suchergebnisse gefunden",
-  "@noSearchResult": {}
+  "@noSearchResult": {},
+  "searchError": "Bei der Suche ist ein Fehler aufgetreten",
+  "@searchError": {}
 }
