New menu icons for read receipts
 #38 Fluffy Chat: moved read receipts to a subfolder and added filter to filter users according to given or not given read receipts

 #38 FluffyChat: hide user who has give read receipt in list of users and read receipts

 #44 FluffyChat: remove required from param onReadReceipt in class Message

 #34 FluffyChat: only admin is allowed to request read receipt

fix errors probably introduced by my rebase

chat list header: missed vrouter dependency

--- a/assets/l10n/intl_de.arb
+++ b/assets/l10n/intl_de.arb
@@ -65,7 +65,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "allChats": "Alle Chats",
+  "allChats": "Räume",
   "@allChats": {
     "type": "text",
     "placeholders": {}
