--- a/assets/l10n/intl_en.arb
+++ b/assets/l10n/intl_en.arb
@@ -93,7 +93,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "allChats": "All chats",
+  "allChats": "Rooms",
   "@allChats": {
     "type": "text",
     "placeholders": {}
